--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,11 @@ playground.xcworkspace
  Packages/
  Package.pins
  Package.resolved
- *.xcodeproj
+ *.Package.resolved
+ */Package.resolved
 
+ *.xcodeproj
+*/xcshareddata
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
  .swiftpm
@@ -92,3 +95,5 @@ iOSInjectionProject/
 MiniChallenge04/MiniChallenge04/Secrets.plist
 *PROD-Keys.plist
 *.DS_Store
+*.xcscheme
+*
